--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Noa Schatz's Personal Website</title>
 </head>
 <body>
-  <h1>I am Noa hear me roar.</h1>
+  <h1>I am Noa hear</h1>
 </body>
 </html>
