--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Noa Schatz's Website</title>
+  <title>Mr.Ro</title>
 </head>
 <body>
-  <h1> "Everyone quiet!" She said in the corner of the room. Our teacher Mrs.Rodwill was furious. She has never been like this. She's always like a flower. The next day Mrs.Rodwill was the same and so she was the next day and the next day after that. Something had to be going on. I  asked my friend what was going on and she said that it had to be some kind of joke. I didn't think it was a joke thou. I thought Mrs.Rodwill was having some trouble with her family. I went up to her and as I was</h1>
+  <h1> "Everyone quiet!" She said in the corner of the room. Our teacher Mr.Rodwill was furious. She has never been like this. She's always like a flower. The next day Mr.Rodwill was the same and so she was the next day and the next day after that. Something had to be going on. I  asked my friend what was going on and she said that it had to be some kind of joke. I didn't think it was a joke thou. I thought Mr.Rodwill was having some trouble with her family. I went up to her and as I was a force pooshed me back into my set.</h1>
 </body>
 </html>
