--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mr.Rodwill 
-  	1858</title>
+  <title>NOA</title>
 </head>
 <body>
-  <h1> "Everyone quiet!" She said in the corner of the room. Our teacher Mr.Rodwill was furious. She has never been like this. She's always like a flower. The next day Mr.Rodwill was the same and so she was the next day and the next day after that. Something had to be going on. I  asked my friend what was going on and she said that it had to be some kind of joke. I didn't think it was a joke thou. I thought Mr.Rodwill was having some trouble with her family. I went up to her and as I was a force pooshed me back into my set.</h1>
+  <h1>Mr.Rodwill 
+  	DATE:6/17/1856 
+   "Everyone quiet!" She said in the corner of the room. Our teacher Mr.Rodwill was furious. She has never been like this. She's always like a flower. The next day Mr.Rodwill was the same and so she was the next day and the next day after that. Something had to be going on. I  asked my friend what was going on and she said that it had to be some kind of joke. I didn't think it was a joke thou. I thought Mr.Rodwill was having some trouble with her family. I went up to her and as I was a force pooshed me back into my set.</h1>
 </body>
 </html>
