--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
   <h1>Mr.Rodwill 
   	DATE:6/17/1856 
-   "Everyone quiet!" He said in the corner of the room. Our teacher Mr.Rodwill was furious. He has never been like this. He's always like a flower. The next day Mr.Rodwill was the same and so he was the next day and the next day after that. Something had to be going on. I  asked my friend what was going on and she said that it had to be some kind of joke. I didn't think it was a joke thou. I thought Mr.Rodwill was having some trouble with her family. I went up to her and as I was a force pooshed me back into my set.</h1>
+   "Everyone quiet!" He said in the corner of the room. Our teacher Mr.Rodwill was furious. He has never been like this. He's always like a flower. The next day Mr.Rodwill was the same and so he was the next day and the next day after that. Something had to be going on. I  asked my friend what was going on and she said that it had to be some kind of joke. I didn't think it was a joke thou. I thought Mr.Rodwill was having some trouble with her family. I went up to her and as I was a force poushed me back into my seat. I hit my head on my desk. </h1>
 </body>
 </html>
