--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Mr. Rodwill</h1>
 	<h2>Date: 6/17/1856</h2>
-  	<p> "Everyone quiet!" He said in the corner of the room. Our teacher Mr.Rodwill was furious. He has never been like this. He's always like a flower. The next day Mr.Rodwill was the same and so he was the next day and the next day after that. Something had to be going on. I  asked my friend what was going on and she said that it had to be some kind of joke. I didn't think it was a joke thou. I thought Mr.Rodwill was having some trouble with her family. I went up to her and as I was a force poushed me back into my seat. I hit my head on my desk. Everything went black.I went to the hospital. They were no help. Thay said that I did NOT need ANY help. atleast I am in heaven.
+  	<p> "Everyone quiet!" He said in the corner of the room. Our teacher Mr.Rodwill was furious. He has never been like this. He's always like a flower. The next day Mr.Rodwill was the same and so he was the next day and the next day after that. Something had to be going on. I  asked my friend what was going on and she said that it had to be some kind of joke. I didn't think it was a joke tho. I thought Mr.Rodwill was having some trouble with his family. I went up to him and as I was a force poushed me back into my seat. I hit my head on my desk. Everything went black.I was sent to the hospital. They were no help. Thay said that I did NOT need ANY help. Atleast I am in heaven. And Jesus I am talking to him right now.
   	                THE END!!!</p>
 </body>
 </html>
